syntax = "proto3";
package TodoGrpc;
option go_package = "g2/proto/grpc";

service TodoService {
  rpc InsertTodoList(TodoList) returns (InsertedIDResponse) {}
  rpc EditTodoList(TodoList) returns (ErrorResponse) {}
  rpc RemoveTodoList(IDRequest) returns (ErrorResponse) {}
  rpc GetTodoListByID(IDRequest) returns (TodoListResponse) {}
  rpc GetTodoListList(SkipLimitRequest) returns (TodoListListResponse) {}

  rpc InsertTodoItem(TodoItem) returns (InsertedIDResponse) {}
  rpc EditTodoItem(TodoItem) returns (ErrorResponse) {}
  rpc RemoveTodoItem(IDRequest) returns (ErrorResponse) {}
  rpc GetTodoItemByID(IDRequest) returns (TodoItemResponse) {}
  rpc GetTodoItemList(IDRequest) returns (TodoItemListResponse) {}
}

//todo list
message TodoList {
  string id = 1;
  string name = 2;
  string description = 3;
  string user_id = 4;
  int32 status = 5;
}
message TodoItem {
  string id = 1;
  string todoListId = 2;
  string title = 3;
  int64 priority = 4;
  string user_id = 5;
  int32 status = 6;
}

//request
message IDRequest {
  string id = 1;
  string user_id = 2;
}
message SkipLimitRequest {
  string user_id = 1;
  int64 skip = 2;
  int64 limit = 3;
}

//response
message TodoListResponse {
  TodoList data = 1;
  ErrorResponse error = 2;
}
message TodoListListResponse {
  repeated TodoList data = 1;
  ErrorResponse error = 2;
}
message TodoItemResponse {
  TodoItem data = 1;
  ErrorResponse error = 2;
}
message TodoItemListResponse {
  repeated TodoItem data = 1;
  ErrorResponse error = 2;
}
message InsertedIDResponse {
  IDRequest data = 1;
  ErrorResponse error = 2;
}

//error
message ErrorResponse {
  string key = 1;
  string Error = 2;
}
